# dothe2

./: .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/v1/: quadrants.py  tasks.py
app/core/: config.py
app/core/db/: config.py  database.py  mock_data.py  models.py
app/routers/: quadrants.py  tasks.py
app/schema/: quadrants.py  tasks.py
app/schemas/: quadrant.py  task.py
src/: alembic.ini
src/app/: main.py
src/app/api/: dependencies.py
src/app/api/v1/: __init__.py  auth.py  quadrants.py  tasks.py
src/app/core/: config.py  email.py  security.py  setup.py
src/app/core/db/: database.py  mixins.py  mock_data.py  models.py
src/app/crud/: auth.py  quadrants.py  tasks.py  users.py
src/app/models/: __init__.py  auth_token.py  quadrant.py  task.py  tier.py  user.py
src/app/schemas/: auth.py  quadrant.py  task.py  user.py
src/migrations/: env.py
src/migrations/versions/: 238cc40a5630_create_quadrant_and_task_tables_with_.py  564212423a72_passwordless_auth_remove_password_add_.py  73c5b69bdbd2_create_initial_quadrants_and_tasks_.py  d9397cb7a683_add_user_and_tier_models.py  fb441667c04d_add_timezone_to_timestamps.py
src/scripts/: populate_quadrants.py
