[project]
name = "dothe2"
version = "0.1.0"
description = "Yet another To-do web app"
authors = ["Ihor Posmashnyi <iposmashnyi@gmail.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "fastapi[standard]>=0.115.12",
    "mypy>=1.15.0",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.9",
    "sqlalchemy>=2.0.40",
]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "F", # Pyflakes
    # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "E", # pycodestyle
    "W", # Warning
    # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    # https://docs.astral.sh/ruff/rules/#mccabe-c90
    "C", # Complexity (mccabe+) & comprehensions
    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "UP", # pyupgrade
    # https://docs.astral.sh/ruff/rules/#isort-i
    "I", # isort
]
ignore = [
    # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "E402", # module level import not at top of a file
    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "E741",  # Ambiguous variable name
]

[tool.ruff.lint.mccabe]
max-complexity = 24

[tool.ruff.lint.pydocstyle]
convention = "pep257"
